# vibe-agent-team

./: .gitignore  CONTRIBUTING.md  README.md  index.html  justfile  package-lock.json  package.json  vite.config.ts  web_server.design.md
.github/workflows/: build-macos.yml  release.yml
cc_agents/: README.md
src/: App.tsx
src-libs/git-tools/: Cargo.toml
src-libs/git-tools/src/: lib.rs
src-libs/workspace/: Cargo.toml
src-libs/workspace/src/: lib.rs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: claude_binary.rs  lib.rs  main.rs  web_main.rs  web_server.rs
src-tauri/src/approvals/: manager.rs  mod.rs  service.rs
src-tauri/src/commands/: agents.rs  claude.rs  message.rs  message_middleware.rs  mod.rs  name_generator.rs  proxy.rs  slash_commands.rs  storage.rs  teammate.rs
src/components/: AgentExecution.tsx  AgentPicker.tsx  AgentRunOutputViewer.tsx  Agents.tsx  AnalyticsConsent.tsx  App.cleaned.tsx  CCAgents.tsx  ClaudeCodeSession.tsx  CreateAgent.tsx  CreateProjectDialog.tsx  CreateTeammate.tsx  CustomTitlebar.tsx  FloatingPromptInput.tsx  GitHubAgentBrowser.tsx  NFOCredits.tsx  SessionOutputViewer.tsx  Settings.tsx  StartupIntro.tsx  StorageTab.tsx  StreamMessage.tsx  TabContent.tsx  TabManager.tsx  Teammates.tsx  ThreeLevelLayout.tsx  ToolWidgets.tsx
src/contexts/: TabContext.tsx  ThemeContext.tsx
src/hooks/: useTabState.ts
src/lib/: TeammateAgent.ts  api.ts  apiAdapter.ts
src/lib/analytics/: index.ts  (+1 more)
src/services/: sessionPersistence.ts  tabPersistence.ts
src/stores/: README.md
(+7 files in other folders)
